Avoid readString in MustacheTemplateManager to support Java 8 compatibility